Closed Bug 667471 Opened 13 years ago Closed 9 years ago

Certificate view does not pretty print names of ECDSA with SHA-2 algorithms

Categories

(Core Graveyard :: Security: UI, defect)

All
Other
defect
Not set
normal

Tracking

(firefox40 fixed)

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: dcooper16, Assigned: dcooper16)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.5; rv:2.0.1) Gecko/20100101 Firefox/4.0.1
Build ID: 20110413222027

Steps to reproduce:

Use the Details tab of certificate viewer to look at the Certificate Signature Algorithm of a certificate signing using ECDSA with SHA-256, SHA-384, or SHA-512.


Actual results:

Field value shows the OID of the signature algorithm.  For example,

   Object Identifier (1 2 840 10045 4 3 2)


Expected results:

Field value should have displayed signature algorithm in a user friendly manner:

   ANSI X9.62 ECDSA Signature with SHA256
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #542170 - Attachment is patch: true
This is David Cooper's patch updated to current trunk.
I've verified via manual testing that the patch works.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=ecc2f2b1e9ca
Attachment #542170 - Attachment is obsolete: true
Attachment #8584955 - Flags: review?(dkeeler)
Comment on attachment 8584955 [details] [diff] [review]
bug667471_pretty-print-ecdsa-sha2-algo-certviewer_by-David-Cooper_v1.patch

Review of attachment 8584955 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM.
Attachment #8584955 - Flags: review?(dkeeler) → review+
On behalf of David Cooper: Thanks for the review!

(Try push is in Comment 1)
Assignee: nobody → dcooper16
Status: NEW → ASSIGNED
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/d66b0fe45158
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: